meta-memfault/recipes-memfault/memfaultd/files/memfaultd/src/metrics/statsd_server/snapshots/memfaultd__metrics__statsd_server__test__test_counter_aggregation.snap
---
source: memfaultd/src/metrics/statsd_server/mod.rs
expression: metrics
---
{
  "test_counter": 2.0
}
