meta-memfault/recipes-memfault/memfaultd/files/memfaultd/src/metrics/statsd_server/snapshots/memfaultd__metrics__statsd_server__test__test_counter_and_legacy_gauge_aggregation.snap
---
source: memfaultd/src/metrics/statsd_server/mod.rs
expression: fixture_legacy_gauge_aggregation.mock.take_metrics().unwrap()
---
{
  "test_counter": 2.0,
  "test_gauge": 6.0
}
