meta-memfault/recipes-memfault/memfaultd/files/memfaultd/src/metrics/statsd_server/snapshots/memfaultd__metrics__statsd_server__test__test_histogram_aggregation.snap
---
source: memfaultd/src/metrics/statsd_server/mod.rs
expression: metrics
---
{
  "test_another_histo": 510.0,
  "test_histo": 100.0,
  "test_one_more_histo": 35.0
}
