meta-memfault/recipes-memfault/memfaultd/files/memfaultd/src/metrics/statsd_server/snapshots/memfaultd__metrics__statsd_server__test__test_simple.snap
---
source: memfaultd/src/metrics/statsd_server/mod.rs
expression: metrics
---
{
  "test_counter": 1.0,
  "test_gauge": 2.0
}
