meta-memfault/recipes-memfault/memfaultd/files/memfaultd/src/metrics/statsd_server/snapshots/memfaultd__metrics__statsd_server__test__test_simple_dashes.snap
---
source: memfaultd/src/metrics/statsd_server/mod.rs
expression: fixture.mock.take_metrics().unwrap()
---
{
  "test-counter": 1.0,
  "test-gauge": 2.0
}
